# oppy

./: Cargo.toml  LICENSE-MIT  build.rs  rust-toolchain.toml
.cargo/: config.toml  runner.sh  x86_64-oppy.json
conf/: limine.cfg
src/: logging.rs  main.rs  serial.rs
src/arch/: mod.rs
src/arch/x86_64/: core_local.rs  gdt.rs  mod.rs
src/memory/: addr.rs
src/util/: error.rs  lock.rs  mod.rs
