[package]
name = "oppy"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "oppy"
test = false
bench = false

[dependencies]
limine = "0.2"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
uart_16550 = "0.3"
x86 = "0.52"
x86_64 = "0.15"
bitflags = "2.5"
bit_field = "0.10"


[profile.release]
debug = 1
